회원가입 버튼 css 적용

--- a/MusicShop/src/main/webapp/login.html
+++ b/MusicShop/src/main/webapp/login.html
@@ -146,7 +146,7 @@
                                 </div>
                                 <button type="submit" class="btn oneMusic-btn mt-30">로그인</button>
                             </form>
-                            	<button class="btn" style="position: absolute; bottom: 60px; left: 75%; transform: translateX(-50%);" onclick="RegistrationPage()">회원가입</button>
+                            	<button class="btn oneMusic-btn mt-30" onclick="RegistrationPage()">회원가입</button>
                         </div>
                     </div>
                 </div>
