2023-07-22 양진호 커밋2 음악 및 해당 음악 앨범 이미지 추가 메인페이지(,jsp)추가, 원래 메인페이지(.html) 수정 / 로그인, 회원가입 페이지 부트스트랩과 CSS에 맞도록 생성

--- a/MusicShop/src/main/webapp/index.html
+++ b/MusicShop/src/main/webapp/index.html
@@ -68,7 +68,7 @@
                                             <li><a href="blog.html">News</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                             <li><a href="elements.html">Elements</a></li>
-                                            <li><a href="login.html">Login</a></li>
+                                            <li><a href="login/login.html">Login</a></li>
                                             <li><a href="#">Dropdown</a>
                                                 <ul class="dropdown">
                                                     <li><a href="#">Even Dropdown</a></li>
@@ -92,17 +92,17 @@
                                     <li><a href="blog.html">News</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
-
+                                
                                 <!-- Login/Register & Cart Button -->
                                 <div class="login-register-cart-button d-flex align-items-center">
                                     <!-- Login/Register -->
                                     <div class="login-register-btn mr-50">
                                         <a href="login.html" id="loginBtn">Login / Register</a>
-                                    </div>
-
+                                    </div> 
+                                                                        
                                     <!-- Cart Button -->
                                     <div class="cart-btn">
-                                        <p><span class="icon-shopping-cart"></span> <span class="quantity">1</span></p>
+                                        <p><span class="icon-shopping-cart"></span> <span class="quantity" style="display:none;">1</span></p>
                                     </div>
                                 </div>
                             </div>
@@ -128,8 +128,8 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
-                                <h6 data-animation="fadeInUp" data-delay="100ms">Latest album</h6>
-                                <h2 data-animation="fadeInUp" data-delay="300ms">Beyond Time <span>Beyond Time</span></h2>
+                                <h6 data-animation="fadeInUp" data-delay="100ms">Welcome to </h6>
+                                <h2 data-animation="fadeInUp" data-delay="300ms">MLP Music <span>MLP Music</span></h2>
                                 <a data-animation="fadeInUp" data-delay="500ms" href="#" class="btn oneMusic-btn mt-50">Discover <i class="fa fa-angle-double-right"></i></a>
                             </div>
                         </div>
@@ -281,21 +281,21 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                     <div class="single-album-area wow fadeInUp" data-wow-delay="100ms">
                         <div class="album-thumb">
-                            <img src="img/bg-img/b1.jpg" alt="">
+                            <img src="img/bg-img/younha.jpg" alt="">
                             <!-- Album Price -->
                             <div class="album-price">
-                                <p>$0.90123</p>
+                                <p>$0.90</p>
                             </div>
                             <!-- Play Icon -->
                             <div class="play-icon">
-                                <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
+                                <a href="https://www.youtube.com/watch?v=BBdC1rl5sKY" class="video--play--btn"><span class="icon-play-button"></span></a>
                             </div>
                         </div>
                         <div class="album-info">
-                            <a href="#">
-                                <h5>Garage Banddddddd</h5>
+                             <a href="albums-store.html?filter=y">
+                                <h5>윤하</h5>
                             </a>
-                            <p>Radio Station</p>
+                            <p>사건의 지평선</p>
                         </div>
                     </div>
                 </div>
@@ -304,13 +304,21 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                     <div class="single-album-area wow fadeInUp" data-wow-delay="200ms">
                         <div class="album-thumb">
-                            <img src="img/bg-img/b2.jpg" alt="">
+                            <img src="img/bg-img/younha2.jpg" alt="">
+                        	<!-- Album Price -->
+                            <div class="album-price">
+                                <p>$0.80</p>
+                            </div>
+                            <!-- Play Icon -->
+                            <div class="play-icon">
+                                <a href="https://www.youtube.com/watch?v=TqFLIZG_aXA" class="video--play--btn"><span class="icon-play-button"></span></a>
+                            </div>                            
                         </div>
                         <div class="album-info">
-                            <a href="#">
-                                <h5>Noises</h5>
+                            <a href="albums-store.html?filter=y">
+                                <h5>윤하</h5>
                             </a>
-                            <p>Buble Gum</p>
+                            <p>오르트구름</p>
                         </div>
                     </div>
                 </div>
@@ -319,13 +327,21 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                     <div class="single-album-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="album-thumb">
-                            <img src="img/bg-img/b3.jpg" alt="">
+                            <img src="img/bg-img/tido.jpg" alt="">
+                        	<!-- Album Price -->
+                            <div class="album-price">
+                                <p>$0.70</p>
+                            </div>
+                            <!-- Play Icon -->
+                            <div class="play-icon">
+                                <a href="https://www.youtube.com/watch?v=9yROTMKPxrA" class="video--play--btn"><span class="icon-play-button"></span></a>
+                            </div>                             
                         </div>
                         <div class="album-info">
-                            <a href="#">
-                                <h5>Jess Parker</h5>
+                            <a href="albums-store.html?filter=t">
+                                <h5>Tido Kang</h5>
                             </a>
-                            <p>The Album</p>
+                            <p>결실</p>
                         </div>
                     </div>
                 </div>
@@ -500,7 +516,7 @@
             <div class="row align-items-end">
                 <div class="col-12 col-md-5 col-lg-4">
                     <div class="featured-artist-thumb">
-                        <img src="img/bg-img/fa.jpg" alt="">
+                        <img src="img/bg-img/younha.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-12 col-md-7 col-lg-8">
@@ -513,7 +529,7 @@
                         <p>Nam tristique ex vel magna tincidunt, ut porta nisl finibus. Vivamus eu dolor eu quam varius rutrum. Fusce nec justo id sem aliquam fringilla nec non lacus. Suspendisse eget lobortis nisi, ac cursus odio. Vivamus nibh velit, rutrum at ipsum ac, dignissim iaculis ante. Donec in velit non elit pulvinar pellentesque et non eros.</p>
                         <div class="song-play-area">
                             <div class="song-name">
-                                <p>01. Main Hit Song</p>
+                                <p>01. 사건의 지평선</p>
                             </div>
                             <audio preload="auto" controls>
                                 <!--  <source src="audio/dummy-audio.mp3">-->
@@ -628,7 +644,7 @@
                                 </div>
                             </div>
                             <audio preload="auto" controls>
-                                <source src="audio/dummy-audio.mp3">
+                                <source src="resource/audio/dummy-audio.mp3">
                             </audio>
                         </div>
 
@@ -644,7 +660,7 @@
                                 </div>
                             </div>
                             <audio preload="auto" controls>
-                                <source src="audio/dummy-audio.mp3">
+                                <source src="resource/audio/dummy-audio.mp3">
                             </audio>
                         </div>
 
@@ -660,7 +676,7 @@
                                 </div>
                             </div>
                             <audio preload="auto" controls>
-                                <source src="audio/dummy-audio.mp3">
+                                <source src="resource/audio/dummy-audio.mp3">
                             </audio>
                         </div>
 
@@ -676,7 +692,7 @@
                                 </div>
                             </div>
                             <audio preload="auto" controls>
-                                <source src="audio/dummy-audio.mp3">
+                                <source src="resource/audio/dummy-audio.mp3">
                             </audio>
                         </div>
 
@@ -692,7 +708,7 @@
                                 </div>
                             </div>
                             <audio preload="auto" controls>
-                                <source src="audio/dummy-audio.mp3">
+                                <source src="resource/audio/dummy-audio.mp3">
                             </audio>
                         </div>
 
@@ -708,7 +724,7 @@
                                 </div>
                             </div>
                             <audio preload="auto" controls>
-                                <source src="audio/dummy-audio.mp3">
+                                <source src="resource/audio/dummy-audio.mp3">
                             </audio>
                         </div>
                     </div>
