--- a/MusicShop/src/main/webapp/albums-store.html
+++ b/MusicShop/src/main/webapp/albums-store.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const urlParams = new URLSearchParams(window.location.search);
+        const filter = urlParams.get("filter");
+
+        if (filter) {
+            const filterLink = document.querySelector(`a[data-filter=".${filter}"]`);
+
+            // 현재 활성화된 클래스를 제거하고 선택한 필터에 활성 클래스를 추가하기.
+            if (filterLink) {
+                const activeClass = document.querySelector("a.active");
+                if (activeClass) {
+                    activeClass.classList.remove("active");
+                }
+
+                filterLink.classList.add("active");
+                filterLink.click();
+            }
+        }
+    });
+</script>
+
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="">
@@ -166,12 +188,12 @@
             <div class="row oneMusic-albums">
 
                 <!-- Single Album -->
-                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t c p">
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item c">
                     <div class="single-album">
                         <img src="img/bg-img/a1.jpg" alt="">
                         <div class="album-info">
                             <a href="#">
-                                <h5>CCCCCCThe Curejinho</h5>
+                                <h5>The Cure</h5>
                             </a>
                             <p>Second Song</p>
                         </div>
@@ -179,12 +201,12 @@
                 </div>
 
                 <!-- Single Album -->
-                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item s e q">
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item s">
                     <div class="single-album">
                         <img src="img/bg-img/a2.jpg" alt="">
                         <div class="album-info">
                             <a href="#">
-                                <h5>EEEEESam Smith</h5>
+                                <h5>Sam Smith</h5>
                             </a>
                             <p>Underground</p>
                         </div>
@@ -192,7 +214,7 @@
                 </div>
 
                 <!-- Single Album -->
-                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item w f r">
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item w">
                     <div class="single-album">
                         <img src="img/bg-img/a3.jpg" alt="">
                         <div class="album-info">
@@ -205,7 +227,7 @@
                 </div>
 
                 <!-- Single Album -->
-                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t g u">
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t">
                     <div class="single-album">
                         <img src="img/bg-img/a4.jpg" alt="">
                         <div class="album-info">
@@ -218,7 +240,7 @@
                 </div>
 
                 <!-- Single Album -->
-                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item d h v">
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item d">
                     <div class="single-album">
                         <img src="img/bg-img/a5.jpg" alt="">
                         <div class="album-info">
@@ -231,7 +253,7 @@
                 </div>
 
                 <!-- Single Album -->
-                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t i x">
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item d">
                     <div class="single-album">
                         <img src="img/bg-img/a6.jpg" alt="">
                         <div class="album-info">
@@ -244,7 +266,7 @@
                 </div>
 
                 <!-- Single Album -->
-                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item b j y">
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item b">
                     <div class="single-album">
                         <img src="img/bg-img/a7.jpg" alt="">
                         <div class="album-info">
@@ -255,9 +277,48 @@
                         </div>
                     </div>
                 </div>
-
+                <!-- 실험 -->
                 <!-- Single Album -->
-                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item a k z">
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item y">
+                    <div class="single-album">
+                        <img src="img/bg-img/younha.jpg" alt="">
+                        <div class="album-info">
+                            <a href="#">
+                                <h5>윤하</h5>
+                            </a>
+                            <p>사건의 지평선</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Single Album -->
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item y">
+                    <div class="single-album">
+                        <img src="img/bg-img/younha2.jpg" alt="">
+                        <div class="album-info">
+                            <a href="#">
+                                <h5>윤하</h5>
+                            </a>
+                            <p>오르트구름</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Single Album -->
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t">
+                    <div class="single-album">
+                        <img src="img/bg-img/tido.jpg" alt="">
+                        <div class="album-info">
+                            <a href="#">
+                                <h5>Tido Kang</h5>
+                            </a>
+                            <p>결실</p>
+                        </div>
+                    </div>
+                </div>                   
+                <!-- 실험 -->       
+                <!-- Single Album -->
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item a">
                     <div class="single-album">
                         <img src="img/bg-img/a8.jpg" alt="">
                         <div class="album-info">
@@ -270,7 +331,7 @@
                 </div>
 
                 <!-- Single Album -->
-                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item w l number">
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item w number">
                     <div class="single-album">
                         <img src="img/bg-img/a9.jpg" alt="">
                         <div class="album-info">
@@ -283,7 +344,7 @@
                 </div>
 
                 <!-- Single Album -->
-                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item d m">
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item d">
                     <div class="single-album">
                         <img src="img/bg-img/a10.jpg" alt="">
                         <div class="album-info">
@@ -296,7 +357,7 @@
                 </div>
 
                 <!-- Single Album -->
-                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t n">
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t">
                     <div class="single-album">
                         <img src="img/bg-img/a11.jpg" alt="">
                         <div class="album-info">
@@ -309,7 +370,7 @@
                 </div>
 
                 <!-- Single Album -->
-                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item b o">
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item b">
                     <div class="single-album">
                         <img src="img/bg-img/a12.jpg" alt="">
                         <div class="album-info">
