2023-08-23 양진호 커밋48 album-songs.jsp에 리뷰 페이지 합침 -> CSS도 추가 일부 페이지에 불필요한 부분 삭제

--- a/MusicShop/src/main/webapp/index.html
+++ b/MusicShop/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>À½¾Ç º°Á¡ ¹× ¸®ºä</title>
+<title>ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½</title>
 
 <link href="./assets/css/star.css" rel="stylesheet"/>
 
@@ -48,30 +48,28 @@
 	
 </style>
 <form class="mb-3" name="myform" id="myform" method="post" action="" enctype="UTF-8">
-	<h1>À½¾Ç ÆòÁ¡</h1>
+	<h1>ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½</h1>
 	<fieldset>
-		<span class="text-bold">º°Á¡À» ¼±ÅÃÇØÁÖ¼¼¿ä</span>
+		<span class="text-bold">ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ö¼ï¿½ï¿½ï¿½</span>
 		<input type="radio" name="reviewStar" value="5" id="rate1"><label
-			for="rate1">¡Ú</label>
+			for="rate1">ï¿½ï¿½</label>
 		<input type="radio" name="reviewStar" value="4" id="rate2"><label
-			for="rate2">¡Ú</label>
+			for="rate2">ï¿½ï¿½</label>
 		<input type="radio" name="reviewStar" value="3" id="rate3"><label
-			for="rate3">¡Ú</label>
+			for="rate3">ï¿½ï¿½</label>
 		<input type="radio" name="reviewStar" value="2" id="rate4"><label
-			for="rate4">¡Ú</label>
+			for="rate4">ï¿½ï¿½</label>
 		<input type="radio" name="reviewStar" value="1" id="rate5"><label
-			for="rate5">¡Ú</label>
+			for="rate5">ï¿½ï¿½</label>
 	</fieldset>
-		</div>
 		<div>
-			<h2>¸®ºä ÀÛ¼º</h2>
-		<tr>
-					<td align = "right" valign = "top"></td>
-					<td colspan = 2><textarea name = "content"" rows = "10" cols = "65" maxlength="4000"></textarea></td>
-					<td><br><br><input type="submit" class="btn-primary pull" value="´ñ±Û ÀÛ¼º"></td>
-					
-				</tr>
-				</div>
+			<h2>ï¿½ï¿½ï¿½ï¿½ ï¿½Û¼ï¿½</h2>
+			<tr>
+				<td align = "right" valign = "top"></td>
+				<td colspan = 2><textarea name = "content"" rows = "10" cols = "65" maxlength="4000"></textarea></td>
+				<td><br><br><input type="submit" class="btn-primary pull" value="ï¿½ï¿½ï¿½ ï¿½Û¼ï¿½"></td>
+			</tr>
+		</div>
 </form>
 </head>
 <body>
